WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162294
URLParser: Fix parsing relative URLs with one slash after the scheme:
https://bugs.webkit.org/show_bug.cgi?id=162294
Summary
URLParser: Fix parsing relative URLs with one slash after the scheme:
Alex Christensen
Reported
2016-09-20 09:51:07 PDT
URLParser: Fix parsing relative URLs with one slash after the scheme:
Attachments
Patch
(2.73 KB, patch)
2016-09-20 09:53 PDT
,
Alex Christensen
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2016-09-20 09:53:14 PDT
Created
attachment 289363
[details]
Patch
Tim Horton
Comment 2
2016-09-20 11:07:19 PDT
Comment on
attachment 289363
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=289363&action=review
> Source/WebCore/ChangeLog:12 > +
You should really explain what was broken here, not just how it's tested.
Alex Christensen
Comment 3
2016-09-20 11:33:51 PDT
http://trac.webkit.org/changeset/206158
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug